--- a/css/kasper.css
+++ b/css/kasper.css
@@ -1,2 +1,10 @@
 /* Start Global Rules */
 * {-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+}
+body {
+    font-family: "Open Sans", sans-serif;
+  }
+  /* End Global Rules */
