--- a/css/kasper.css
+++ b/css/kasper.css
@@ -3,6 +3,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0;
+    margin: 0;
 }
 body {
     font-family: "Open Sans", sans-serif;
