--- a/css/kasper.css
+++ b/css/kasper.css
@@ -19,5 +19,7 @@ ul {
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
+    margin-right: auto;
+}
 
   /* End Global Rules */
