--- a/css/kasper.css
+++ b/css/kasper.css
@@ -54,5 +54,6 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 
 
