--- a/css/kasper.css
+++ b/css/kasper.css
@@ -55,5 +55,7 @@ header .container {
     justify-content: space-between;
     align-items: center;
     position: relative;
+    min-height: 97px;
+}
 
 
