--- a/css/kasper.css
+++ b/css/kasper.css
@@ -88,5 +88,8 @@ header nav .toggle-menu {
     display: flex;
 }
 @media (max-width: 767px) {
+    header nav ul {
+        display: none;
+    }
 
 
