--- a/css/kasper.css
+++ b/css/kasper.css
@@ -91,5 +91,8 @@ header nav .toggle-menu {
     header nav ul {
         display: none;
     }
+    header nav ul li a {
+        padding: 15px !important;
+      }
 
 
