coordination header nav

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -94,5 +94,7 @@ header nav .toggle-menu {
     header nav ul li a {
         padding: 15px !important;
       }
+    }
+    header nav ul li a {
 
 
