--- a/css/kasper.css
+++ b/css/kasper.css
@@ -98,5 +98,6 @@ header nav .toggle-menu {
     header nav ul li a {
         padding: 40px 10px;
         display: block;
+        color: white;
 
 
