--- a/css/kasper.css
+++ b/css/kasper.css
@@ -99,5 +99,6 @@ header nav .toggle-menu {
         padding: 40px 10px;
         display: block;
         color: white;
+        text-decoration: none;
 
 
