coordination font-size

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -100,5 +100,6 @@ header nav .toggle-menu {
         display: block;
         color: white;
         text-decoration: none;
+        font-size: 14px;
 
 
