--- a/css/kasper.css
+++ b/css/kasper.css
@@ -101,5 +101,6 @@ header nav .toggle-menu {
         color: white;
         text-decoration: none;
         font-size: 14px;
+        transition: 0.3s;
 
 
