--- a/css/kasper.css
+++ b/css/kasper.css
@@ -102,5 +102,6 @@ header nav .toggle-menu {
         text-decoration: none;
         font-size: 14px;
         transition: 0.3s;
+        position: relative;
 
 
