--- a/css/kasper.css
+++ b/css/kasper.css
@@ -103,5 +103,7 @@ header nav .toggle-menu {
         font-size: 14px;
         transition: 0.3s;
         position: relative;
+        z-index: 2;
+}
 
 
