--- a/css/kasper.css
+++ b/css/kasper.css
@@ -108,5 +108,7 @@ header nav .toggle-menu {
 header nav ul li a.active,
 header nav ul li a:hover {
     color: var(--main-color);
+    border-bottom: 1px solid var(--main-color);
+}
 
 
