--- a/css/kasper.css
+++ b/css/kasper.css
@@ -110,5 +110,6 @@ header nav ul li a:hover {
     color: var(--main-color);
     border-bottom: 1px solid var(--main-color);
 }
+header nav .form {
 
 
