--- a/css/kasper.css
+++ b/css/kasper.css
@@ -115,6 +115,8 @@ header nav .form {
     height: 30px;
     position: relative;
     margin-left: 30px;
+    border-left: 1px solid white;
+}
   
 
 
