--- a/css/kasper.css
+++ b/css/kasper.css
@@ -91,6 +91,8 @@ header nav .toggle-menu {
     header nav ul {
         display: none;
     }
+    header nav .toggle-menu:hover + ul {
+        
     header nav ul li a {
         padding: 15px !important;
       }
@@ -111,7 +113,7 @@ header nav ul li a:hover {
     border-bottom: 1px solid var(--main-color);
 }
 header nav .form {
-    width: 40px;
+    width: 40px; 
     height: 30px;
     position: relative;
     margin-left: 30px;
@@ -125,6 +127,7 @@ header nav .form i {
     transform: translateY(-50%);
     right: 0;
 }
+/* End Header */
   
 
 
