coordination flex-direction

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -93,6 +93,7 @@ header nav .toggle-menu {
     }
     header nav .toggle-menu:hover + ul {
         display: flex;
+        flex-direction: column;
     }
       header nav ul li a {
         padding: 15px !important;
