--- a/css/kasper.css
+++ b/css/kasper.css
@@ -94,6 +94,7 @@ header nav .toggle-menu {
     header nav .toggle-menu:hover + ul {
         display: flex;
         flex-direction: column;
+        position: absolute;
     }
       header nav ul li a {
         padding: 15px !important;
