--- a/css/kasper.css
+++ b/css/kasper.css
@@ -95,6 +95,7 @@ header nav .toggle-menu {
         display: flex;
         flex-direction: column;
         position: absolute;
+        top: 100%;
     }
       header nav ul li a {
         padding: 15px !important;
