--- a/css/kasper.css
+++ b/css/kasper.css
@@ -96,6 +96,7 @@ header nav .toggle-menu {
         flex-direction: column;
         position: absolute;
         top: 100%;
+        left: 0;
     }
       header nav ul li a {
         padding: 15px !important;
