--- a/css/kasper.css
+++ b/css/kasper.css
@@ -97,6 +97,7 @@ header nav .toggle-menu {
         position: absolute;
         top: 100%;
         left: 0;
+        width: 100%;
     }
       header nav ul li a {
         padding: 15px !important;
