--- a/css/kasper.css
+++ b/css/kasper.css
@@ -98,6 +98,7 @@ header nav .toggle-menu {
         top: 100%;
         left: 0;
         width: 100%;
+        background-color: rgb(0 0 0 / 50%);
     }
       header nav ul li a {
         padding: 15px !important;
