--- a/css/kasper.css
+++ b/css/kasper.css
@@ -100,7 +100,7 @@ header nav .toggle-menu {
         width: 100%;
         background-color: rgb(0 0 0 / 50%);
     }
-      header nav ul li a {
+    header nav ul li a {
         padding: 15px !important;
       }
     }
@@ -135,6 +135,8 @@ header nav .form i {
     right: 0;
 }
 /* End Header */
+/* Start Landing */
+.landing {
   
 
 
