--- a/css/kasper.css
+++ b/css/kasper.css
@@ -138,7 +138,7 @@ header nav .form i {
 /* Start Landing */
 .landing {
     min-height: 100vh;
-    
+    background-image: url("../images/landing.jpg");
   
 
 
