--- a/css/kasper.css
+++ b/css/kasper.css
@@ -141,6 +141,8 @@ header nav .form i {
     background-color: #1f2021;
     background-image: url("../images/landing.jpg");
     background-size: cover;
+    position: relative;
+}
   
 
 
