--- a/css/kasper.css
+++ b/css/kasper.css
@@ -158,6 +158,7 @@ header nav .form i {
     transform: translateY(-50%);
     width: 50%;
     padding: 50px;
+    background-color: var(--transparent-color);
   
 
 
