--- a/css/kasper.css
+++ b/css/kasper.css
@@ -160,6 +160,7 @@ header nav .form i {
     padding: 50px;
     background-color: var(--transparent-color);
     color: white;
+    display: flex;
   
 
 
