coordination justify-content

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -161,6 +161,8 @@ header nav .form i {
     background-color: var(--transparent-color);
     color: white;
     display: flex;
+    justify-content: flex-end;
+}
   
 
 
