--- a/css/kasper.css
+++ b/css/kasper.css
@@ -187,6 +187,7 @@ header nav .form i {
 .landing .change-background {
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
 
 
 
