--- a/css/kasper.css
+++ b/css/kasper.css
@@ -216,6 +216,8 @@ header nav .form i {
     margin-right: 10px;
 }
 .landing .bullets li.active {
+    background-color: var(--main-color);
+    
 
 
 
