--- a/css/kasper.css
+++ b/css/kasper.css
@@ -217,7 +217,9 @@ header nav .form i {
 }
 .landing .bullets li.active {
     background-color: var(--main-color);
-    
+    border-color: var(--main-color);
+}
+
 
 
 
