coordination main-heading

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -44,6 +44,7 @@ ul {
 
   /* End Global Rules */
   /* Start Components */
+  .main-heading {
   /* Start Header */
 header {
     position: absolute;
