--- a/css/kasper.css
+++ b/css/kasper.css
@@ -45,6 +45,9 @@ ul {
   /* End Global Rules */
   /* Start Components */
   .main-heading {
+    text-align: center;
+}
+
   /* Start Header */
 header {
     position: absolute;
