--- a/css/kasper.css
+++ b/css/kasper.css
@@ -51,7 +51,7 @@ ul {
     font-weight: normal;
     font-size: 40px;
     position: relative;
-
+    margin-bottom: 70px;
   /* Start Header */
 header {
     position: absolute;
