--- a/css/kasper.css
+++ b/css/kasper.css
@@ -55,6 +55,8 @@ ul {
     text-transform: uppercase;
 }
 .main-heading h2::before {
+    content: "";
+    
   /* Start Header */
 header {
     position: absolute;
