--- a/css/kasper.css
+++ b/css/kasper.css
@@ -53,11 +53,12 @@ ul {
     position: relative;
     margin-bottom: 70px;
     text-transform: uppercase;
+    left: 50%;
 }
 .main-heading h2::before {
     content: "";
     position: absolute;
-    
+
   /* Start Header */
 header {
     position: absolute;
