--- a/css/kasper.css
+++ b/css/kasper.css
@@ -56,6 +56,7 @@ ul {
     left: 50%;
     transform: translateX(-50%);
     height: 2px;
+    background-color: #333;
 }
 .main-heading h2::before {
     content: "";
