--- a/css/kasper.css
+++ b/css/kasper.css
@@ -57,6 +57,7 @@ ul {
     transform: translateX(-50%);
     height: 2px;
     background-color: #333;
+    bottom: -30px;
 }
 .main-heading h2::before {
     content: "";
