--- a/css/kasper.css
+++ b/css/kasper.css
@@ -56,7 +56,7 @@ ul {
 
 }
 .main-heading h2::before {
-    
+    content: "";
 .main-heading h2::before {
     content: "";
     position: absolute;
