--- a/css/kasper.css
+++ b/css/kasper.css
@@ -57,6 +57,8 @@ ul {
 }
 .main-heading h2::before {
     content: "";
+    position: absolute;
+    
 .main-heading h2::before {
     content: "";
     position: absolute;
