--- a/css/kasper.css
+++ b/css/kasper.css
@@ -58,7 +58,7 @@ ul {
 .main-heading h2::before {
     content: "";
     position: absolute;
-    
+    left: 50%;
 .main-heading h2::before {
     content: "";
     position: absolute;
