--- a/css/kasper.css
+++ b/css/kasper.css
@@ -59,6 +59,8 @@ ul {
     content: "";
     position: absolute;
     left: 50%;
+    transform: translateX(-50%);
+    
 .main-heading h2::before {
     content: "";
     position: absolute;
