--- a/css/kasper.css
+++ b/css/kasper.css
@@ -53,7 +53,7 @@ ul {
     position: relative;
     margin-bottom: 70px;
     text-transform: uppercase;
-
+    height: 2px;
 }
 .main-heading h2::before {
     content: "";
