--- a/css/kasper.css
+++ b/css/kasper.css
@@ -55,6 +55,7 @@ ul {
     text-transform: uppercase;
     height: 2px;
     background-color: #333;
+    bottom: -30px;
 }
 .main-heading h2::before {
     content: "";
