--- a/css/kasper.css
+++ b/css/kasper.css
@@ -56,6 +56,7 @@ ul {
     height: 2px;
     background-color: #333;
     bottom: -30px;
+    width: 120px;
 }
 .main-heading h2::before {
     content: "";
