--- a/css/kasper.css
+++ b/css/kasper.css
@@ -53,21 +53,33 @@ ul {
     position: relative;
     margin-bottom: 70px;
     text-transform: uppercase;
-    height: 2px;
-    background-color: #333;
-    bottom: -30px;
-    width: 120px;
+    
 }
 .main-heading h2::before {
     content: "";
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    
-.main-heading h2::before {
+    height: 2px;
+    background-color: #333;
+    bottom: -30px;
+    width: 120px;
+}
+.main-heading h2::after {
     content: "";
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    border: 2px solid #333;
+    bottom: -38px;
+    background-color: white;
+  }
 
+
+  .main-heading p {
   /* Start Header */
 header {
     position: absolute;
