--- a/css/kasper.css
+++ b/css/kasper.css
@@ -82,6 +82,7 @@ ul {
   .main-heading p {
     width: 550px;
     margin: 0 auto 100px;
+    max-width: 100%;
   /* Start Header */
 header {
     position: absolute;
