--- a/css/kasper.css
+++ b/css/kasper.css
@@ -83,6 +83,7 @@ ul {
     width: 550px;
     margin: 0 auto 100px;
     max-width: 100%;
+    line-height: 2;
   /* Start Header */
 header {
     position: absolute;
