--- a/css/kasper.css
+++ b/css/kasper.css
@@ -267,6 +267,8 @@ header nav .form i {
 /* Start Services */
 .services {
     padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
 
 
 
