--- a/css/kasper.css
+++ b/css/kasper.css
@@ -269,6 +269,7 @@ header nav .form i {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
 }
+@media (min-width: 768px) {
 
 
 
