--- a/css/kasper.css
+++ b/css/kasper.css
@@ -274,6 +274,9 @@ header nav .form i {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
         grid-column-gap: 40px;
+        grid-row-gap: 60px;
+  }
+}
 
 
 
