--- a/css/kasper.css
+++ b/css/kasper.css
@@ -286,6 +286,7 @@ header nav .form i {
 @media (max-width: 767px) {
     .services .srv-box {
         display: flex;
+        flex-direction: column;
 
 
 
