--- a/css/kasper.css
+++ b/css/kasper.css
@@ -287,6 +287,9 @@ header nav .form i {
     .services .srv-box {
         display: flex;
         flex-direction: column;
+        text-align: center;
+        margin-bottom: 40px;
+    }
 
 
 
