--- a/css/kasper.css
+++ b/css/kasper.css
@@ -291,6 +291,10 @@ header nav .form i {
         margin-bottom: 40px;
     }
     .services .srv-box i {
+        margin: 0 0 30px;
+  }
+}
+.services .srv-box h3 {
 
 
 
