--- a/css/kasper.css
+++ b/css/kasper.css
@@ -306,6 +306,7 @@ header nav .form i {
 /* Start Design */
 .design {
     padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
 
 
 
