--- a/css/kasper.css
+++ b/css/kasper.css
@@ -307,6 +307,7 @@ header nav .form i {
 .design {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
+    height: 600px;
 
 
 
