--- a/css/kasper.css
+++ b/css/kasper.css
@@ -308,6 +308,7 @@ header nav .form i {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
     height: 600px;
+    position: relative;
 
 
 
