--- a/css/kasper.css
+++ b/css/kasper.css
@@ -309,7 +309,9 @@ header nav .form i {
     padding-bottom: var(--section-padding);
     height: 600px;
     position: relative;
-    background-image: url("../images/design-features.jpg");
+    background-image: url("../images/features.jpg");
+    background-size: cover;
+
 
 
 
