--- a/css/kasper.css
+++ b/css/kasper.css
@@ -311,6 +311,7 @@ header nav .form i {
     position: relative;
     background-image: url("../images/features.jpg");
     background-size: cover;
+    display: flex;
 
 
 
