--- a/css/kasper.css
+++ b/css/kasper.css
@@ -345,6 +345,8 @@ header nav .form i {
 .design .text {
     color: white;
     padding: 50px;
+    background-color: var(--transparent-color);
+}
 
 
 
