--- a/css/kasper.css
+++ b/css/kasper.css
@@ -350,6 +350,8 @@ header nav .form i {
 .design .text h2 {
     font-weight: normal;
     text-transform: uppercase;
+    margin-bottom: 40px;
+}
 
 
 
