coordination padding-bottom

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -367,6 +367,8 @@ header nav .form i {
 /* Start Portfolio */
 .portfolio {
     padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
 
 
 
