--- a/css/kasper.css
+++ b/css/kasper.css
@@ -392,6 +392,7 @@ header nav .form i {
 .portfolio .imgs-container .box:hover .caption {
     bottom: 0;
 }
+.portfolio .imgs-container .box:hover img {
 
 
 
