--- a/css/kasper.css
+++ b/css/kasper.css
@@ -395,6 +395,7 @@ header nav .form i {
 .portfolio .imgs-container .box:hover img {
     transform: rotate(3deg) scale(1.1);
 }
+@media (min-width: 768px) {
 
 
 
