--- a/css/kasper.css
+++ b/css/kasper.css
@@ -396,6 +396,7 @@ header nav .form i {
     transform: rotate(3deg) scale(1.1);
 }
 @media (min-width: 768px) {
+    .portfolio .imgs-container .box {
 
 
 
