--- a/css/kasper.css
+++ b/css/kasper.css
@@ -402,6 +402,9 @@ header nav .form i {
 }
 @media (min-width: 1199px) {
     .portfolio .imgs-container .box {
+        flex-basis: 25%;
+    }
+  }
 
 
 
