--- a/css/kasper.css
+++ b/css/kasper.css
@@ -412,6 +412,7 @@ header nav .form i {
 .portfolio .imgs-container .box .caption {
     position: absolute;
     left: 0;
+    padding: 20px;
 
 
 
