--- a/css/kasper.css
+++ b/css/kasper.css
@@ -420,6 +420,8 @@ header nav .form i {
 }
 .portfolio .imgs-container .box .caption h4 {
     font-weight: normal;
+    margin-bottom: 10px;
+}
 
 
 
