--- a/css/kasper.css
+++ b/css/kasper.css
@@ -423,6 +423,8 @@ header nav .form i {
     margin-bottom: 10px;
 }
 .portfolio .imgs-container .box .caption p {
+    color: var(--main-color);
+}
 
 
 
