--- a/css/kasper.css
+++ b/css/kasper.css
@@ -428,6 +428,7 @@ header nav .form i {
 .portfolio .more {
     background-color: var(--main-color);
     color: white;
+    padding: 15px 20px;
 
 
 
