--- a/css/kasper.css
+++ b/css/kasper.css
@@ -433,6 +433,8 @@ header nav .form i {
     width: fit-content;
     margin: 30px auto;
     text-decoration: none;
+    text-transform: uppercase;
+}
 
 
 
