--- a/css/kasper.css
+++ b/css/kasper.css
@@ -442,7 +442,8 @@ header nav .form i {
     position: relative;
 }
 .video::before {
-    content: "";   
+    content: "";
+    position: absolute;   
 
 
 
