--- a/css/kasper.css
+++ b/css/kasper.css
@@ -445,7 +445,8 @@ header nav .form i {
     content: "";
     position: absolute;
     left: 0;
-    top: 0;   
+    top: 0;
+    width: 100%;   
 
 
 
