--- a/css/kasper.css
+++ b/css/kasper.css
@@ -446,7 +446,8 @@ header nav .form i {
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;   
+    width: 100%;
+    height: 100%;   
 
 
 
