--- a/css/kasper.css
+++ b/css/kasper.css
@@ -447,7 +447,9 @@ header nav .form i {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;   
+    height: 100%;
+    background-color: rgb(0 0 0 / 40%);
+}   
 
 
 
