--- a/css/kasper.css
+++ b/css/kasper.css
@@ -449,8 +449,9 @@ header nav .form i {
     width: 100%;
     height: 100%;
     background-color: rgb(0 0 0 / 40%);
-}   
+}
 
+.video video {
 
 
   
