--- a/css/kasper.css
+++ b/css/kasper.css
@@ -460,6 +460,7 @@ header nav .form i {
     top: 50%;
     transform: translateY(-50%);
     padding: 50px;
+    background-color: var(--transparent-color);
 
 
   
