--- a/css/kasper.css
+++ b/css/kasper.css
@@ -461,6 +461,7 @@ header nav .form i {
     transform: translateY(-50%);
     padding: 50px;
     background-color: var(--transparent-color);
+    color: white;
 
 
   
