--- a/css/kasper.css
+++ b/css/kasper.css
@@ -462,6 +462,8 @@ header nav .form i {
     padding: 50px;
     background-color: var(--transparent-color);
     color: white;
+    text-align: center;
+}
 
 
   
