--- a/css/kasper.css
+++ b/css/kasper.css
@@ -479,6 +479,10 @@ header nav .form i {
     border: none;
     text-transform: uppercase;
 }
+/* End Video */
+<!-- Start About -->
+<div class="about">
+ 
 
   
 
