--- a/css/kasper.css
+++ b/css/kasper.css
@@ -485,6 +485,10 @@ header nav .form i {
 <div class="container">
 <div class="main-heading">
 <h2>About Us</h2>
+<p>
+Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+tincidunt.
+</p>
  
 
   
