--- a/css/kasper.css
+++ b/css/kasper.css
@@ -481,15 +481,16 @@ header nav .form i {
 }
 /* End Video */
 <!-- Start About -->
-<div class="about">
-<div class="container">
-<div class="main-heading">
-<h2>About Us</h2>
-<p>
-Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
-tincidunt.
-</p>
- 
+    <div class="about">
+      <div class="container">
+        <div class="main-heading">
+          <h2>About Us</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+            tincidunt.
+          </p>
+        </div>
+        <img decoding="async" src="images/about.jpg" alt="" />
 
   
 
