coordination img about

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -490,8 +490,7 @@ header nav .form i {
             tincidunt.
           </p>
         </div>
-        <img decoding="async" src="images/about.jpg" alt="" />
-
+        <img decoding="async" src="images/about.png" alt="" />
   
 
 
