coordination  text-align

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -484,6 +484,8 @@ header nav .form i {
 .about {
     padding-top: var(--section-padding);
     overflow: hidden;
+    text-align: center;
+}
   
 
 
