--- a/css/kasper.css
+++ b/css/kasper.css
@@ -495,6 +495,10 @@ header nav .form i {
 @media (max-width: 767px) {
     .about img {
         bottom: -60px;
+        margin-top: -60px;
+    }
+  }
+  
   
 
 
