--- a/css/kasper.css
+++ b/css/kasper.css
@@ -503,6 +503,7 @@ header nav .form i {
   .stats {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
+    text-align: center;
 
 
   
