--- a/css/kasper.css
+++ b/css/kasper.css
@@ -505,6 +505,10 @@ header nav .form i {
     padding-bottom: var(--section-padding);
     text-align: center;
     background-image: url("../images/stats.png");
+    background-size: cover;
+
+
+    
 
 
   
