--- a/css/kasper.css
+++ b/css/kasper.css
@@ -525,6 +525,8 @@ header nav .form i {
 .stats .container .box {
     color: white;
     padding: 50px;
+    background-color: var(--transparent-color);
+}
 
 
     
