coordination  flex-basis

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -529,6 +529,10 @@ header nav .form i {
 }
 @media (max-width: 767px) {
     .stats .container .box {
+        flex-basis: 100%;
+    }
+  }
+
 
 
     
