--- a/css/kasper.css
+++ b/css/kasper.css
@@ -534,6 +534,9 @@ header nav .form i {
   }
   @media (min-width: 768px) {
     .stats .container .box {
+        flex-basis: 50%;
+    }
+  }
 
 
 
