--- a/css/kasper.css
+++ b/css/kasper.css
@@ -548,6 +548,7 @@ header nav .form i {
     display: flex;
     background-color: black;
     justify-content: center;
+    align-items: center;
 
 
 
