--- a/css/kasper.css
+++ b/css/kasper.css
@@ -549,6 +549,7 @@ header nav .form i {
     background-color: black;
     justify-content: center;
     align-items: center;
+    border-radius: 50%;
 
 
 
