--- a/css/kasper.css
+++ b/css/kasper.css
@@ -550,6 +550,8 @@ header nav .form i {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    margin: 0 auto 30px;
+}
 
 
 
