--- a/css/kasper.css
+++ b/css/kasper.css
@@ -555,6 +555,8 @@ header nav .form i {
 .stats .container .box .number {
     font-size: 50px;
     font-weight: bold;
+    margin: 0 0 20px;
+}
 
 
 
