coordination  padding-bottom

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -564,6 +564,8 @@ header nav .form i {
 /* Start Skills */
 .our-skills {
     padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
 
 
 
