--- a/css/kasper.css
+++ b/css/kasper.css
@@ -566,6 +566,7 @@ header nav .form i {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
 }
+.our-skills .container {
 
 
 
