--- a/css/kasper.css
+++ b/css/kasper.css
@@ -569,6 +569,8 @@ header nav .form i {
 .our-skills .container {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
 
 
 
