--- a/css/kasper.css
+++ b/css/kasper.css
@@ -580,6 +580,8 @@ header nav .form i {
     margin: 0 0 30px;
     font-weight: normal;
     text-align: center;
+    text-transform: uppercase;
+}
 
 
 
