--- a/css/kasper.css
+++ b/css/kasper.css
@@ -591,6 +591,8 @@ header nav .form i {
 .our-skills .testimonials .content {
     display: flex;
     align-items: center;
+    margin-bottom: 30px;
+}
 
 
 
