--- a/css/kasper.css
+++ b/css/kasper.css
@@ -600,6 +600,7 @@ header nav .form i {
 }
 @media (max-width: 767px) {
     .our-skills .testimonials .content {
+        flex-direction: column;
 
 
 
