--- a/css/kasper.css
+++ b/css/kasper.css
@@ -601,6 +601,8 @@ header nav .form i {
 @media (max-width: 767px) {
     .our-skills .testimonials .content {
         flex-direction: column;
+        text-align: center;
+    }
 
 
 
