--- a/css/kasper.css
+++ b/css/kasper.css
@@ -603,6 +603,7 @@ header nav .form i {
         flex-direction: column;
         text-align: center;
     }
+    .our-skills .testimonials .content img {
 
 
 
