--- a/css/kasper.css
+++ b/css/kasper.css
@@ -604,6 +604,7 @@ header nav .form i {
         text-align: center;
     }
     .our-skills .testimonials .content img {
+        margin: 0 auto 20px;
 
 
 
