--- a/css/kasper.css
+++ b/css/kasper.css
@@ -605,6 +605,9 @@ header nav .form i {
     }
     .our-skills .testimonials .content img {
         margin: 0 auto 20px;
+    }
+}
+.our-skills .testimonials .text {
 
 
 
