--- a/css/kasper.css
+++ b/css/kasper.css
@@ -620,6 +620,7 @@ header nav .form i {
 .our-skills .testimonials .bullets {
     display: flex;
     justify-content: center;
+    margin-top: 50px;
 
 
 
