--- a/css/kasper.css
+++ b/css/kasper.css
@@ -626,6 +626,7 @@ header nav .form i {
 .our-skills .testimonials .bullets li {
     width: 14px;
     height: 14px;
+    border: 1px solid #aaa;
 
 
 
