--- a/css/kasper.css
+++ b/css/kasper.css
@@ -632,6 +632,8 @@ header nav .form i {
 }
 .our-skills .testimonials .bullets li.active {
     background-color: var(--main-color);
+    border-color: var(--main-color);
+}
 
 
 
