--- a/css/kasper.css
+++ b/css/kasper.css
@@ -634,6 +634,7 @@ header nav .form i {
     background-color: var(--main-color);
     border-color: var(--main-color);
 }
+.our-skills .skills .prog-holder {
 
 
 
