--- a/css/kasper.css
+++ b/css/kasper.css
@@ -637,6 +637,7 @@ header nav .form i {
 .our-skills .skills .prog-holder {
     margin-bottom: 40px;
 }
+.our-skills .skills .prog-holder h4 {
 
 
 
