--- a/css/kasper.css
+++ b/css/kasper.css
@@ -642,6 +642,7 @@ header nav .form i {
     font-weight: normal;
     text-transform: uppercase;
 }
+.our-skills .skills .prog-holder .prog {
 
 
 
