--- a/css/kasper.css
+++ b/css/kasper.css
@@ -643,6 +643,7 @@ header nav .form i {
     text-transform: uppercase;
 }
 .our-skills .skills .prog-holder .prog {
+    background-color: #dedadc;
 
 
 
