--- a/css/kasper.css
+++ b/css/kasper.css
@@ -648,6 +648,7 @@ header nav .form i {
 }
 .our-skills .skills .prog-holder .prog span {
     display: block;
+    background-color: var(--main-color);
 
 
 
