--- a/css/kasper.css
+++ b/css/kasper.css
@@ -649,6 +649,7 @@ header nav .form i {
 .our-skills .skills .prog-holder .prog span {
     display: block;
     background-color: var(--main-color);
+    height: 100%;
 
 
 
