--- a/css/kasper.css
+++ b/css/kasper.css
@@ -650,6 +650,8 @@ header nav .form i {
     display: block;
     background-color: var(--main-color);
     height: 100%;
+    position: relative;
+}
 
 
 
