--- a/css/kasper.css
+++ b/css/kasper.css
@@ -653,6 +653,7 @@ header nav .form i {
     position: relative;
 }
 .our-skills .skills .prog-holder .prog span::before {
+    content: attr(data-progress);
 
 
 
