coordination  background-color

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -655,6 +655,7 @@ header nav .form i {
 .our-skills .skills .prog-holder .prog span::before {
     content: attr(data-progress);
     position: absolute;
+    background-color: black;
 
 
 
