--- a/css/kasper.css
+++ b/css/kasper.css
@@ -656,6 +656,7 @@ header nav .form i {
     content: attr(data-progress);
     position: absolute;
     background-color: black;
+    color: white;
 
 
 
