--- a/css/kasper.css
+++ b/css/kasper.css
@@ -667,6 +667,7 @@ header nav .form i {
 .our-skills .skills .prog-holder .prog span::after {
     content: "";
     position: absolute;
+    border-style: solid;
 
 
 
