--- a/css/kasper.css
+++ b/css/kasper.css
@@ -670,6 +670,7 @@ header nav .form i {
     border-style: solid;
     border-width: 8px;
     border-color: black transparent transparent;
+    right: -8px;
 
 
 
