--- a/css/kasper.css
+++ b/css/kasper.css
@@ -677,7 +677,7 @@ header nav .form i {
 /* Start Quote */
 .quote {
     padding-top: var(--section-padding);
-    
+    padding-bottom: var(--section-padding);
 
 
 
