--- a/css/kasper.css
+++ b/css/kasper.css
@@ -680,6 +680,7 @@ header nav .form i {
     padding-bottom: var(--section-padding);
     background-image: url("../images/quote.jpg");
     background-size: cover;
+    position: relative;
 
 
 
