--- a/css/kasper.css
+++ b/css/kasper.css
@@ -681,6 +681,7 @@ header nav .form i {
     background-image: url("../images/quote.jpg");
     background-size: cover;
     position: relative;
+    text-align: center;
 
 
 
