--- a/css/kasper.css
+++ b/css/kasper.css
@@ -705,6 +705,8 @@ header nav .form i {
 /* Start Pricing */
 .pricing {
     padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
 
 
 
