coordination .pricing .plans

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -707,6 +707,8 @@ header nav .form i {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
 }
+.pricing .plans {
+    
 
 
 
