--- a/css/kasper.css
+++ b/css/kasper.css
@@ -710,6 +710,8 @@ header nav .form i {
 .pricing .plans {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 30px;
+}
 
 
 
