--- a/css/kasper.css
+++ b/css/kasper.css
@@ -721,6 +721,8 @@ header nav .form i {
     border-top: 1px solid var(--main-color);
     border-bottom: 1px solid var(--main-color);
 }
+.pricing .plans .plan .head h3 {
+    
 
 
 
