--- a/css/kasper.css
+++ b/css/kasper.css
@@ -722,7 +722,7 @@ header nav .form i {
     border-bottom: 1px solid var(--main-color);
 }
 .pricing .plans .plan .head h3 {
-    
+    font-weight: normal;
 
 
 
