--- a/css/kasper.css
+++ b/css/kasper.css
@@ -733,6 +733,7 @@ header nav .form i {
 .pricing .plans .plan .head span::before {
     content: "$";
     font-size: 25px;
+    position: relative;
 
 
 
