--- a/css/kasper.css
+++ b/css/kasper.css
@@ -751,6 +751,7 @@ header nav .form i {
     padding: 20px;
     position: relative;
 }
+.pricing .plans .plan ul li:not(:last-child)::after {
 
 
 
