--- a/css/kasper.css
+++ b/css/kasper.css
@@ -752,6 +752,8 @@ header nav .form i {
     position: relative;
 }
 .pricing .plans .plan ul li:not(:last-child)::after {
+    content: "";
+    
 
 
 
