--- a/css/kasper.css
+++ b/css/kasper.css
@@ -756,6 +756,7 @@ header nav .form i {
     width: 140px;
     height: 1px;
     background-color: var(--main-color);
+    position: absolute;
 
 
 
