--- a/css/kasper.css
+++ b/css/kasper.css
@@ -758,6 +758,7 @@ header nav .form i {
     background-color: var(--main-color);
     position: absolute;
     left: 50%;
+    transform: translateX(-50%);
 
 
 
