--- a/css/kasper.css
+++ b/css/kasper.css
@@ -764,6 +764,7 @@ header nav .form i {
 .pricing .plans .plan .foot a {
     display: block;
     padding: 20px 20px;
+    text-decoration: none;
 
 
 
