--- a/css/kasper.css
+++ b/css/kasper.css
@@ -766,6 +766,7 @@ header nav .form i {
     padding: 20px 20px;
     text-decoration: none;
     border: 1px solid var(--main-color);
+    width: fit-content;
 
 
 
