--- a/css/kasper.css
+++ b/css/kasper.css
@@ -772,6 +772,8 @@ header nav .form i {
 .pricing .contact-text {
     text-align: center;
     margin: 50px auto 20px;
+    font-size: 20px;
+}
 
 
 
