--- a/css/kasper.css
+++ b/css/kasper.css
@@ -779,6 +779,7 @@ header nav .form i {
     width: fit-content;
     margin: 20px auto;
     background-color: var(--main-color);
+    color: white;
 
 
 
