--- a/css/kasper.css
+++ b/css/kasper.css
@@ -787,6 +787,7 @@ header nav .form i {
 /* Start Subscribe */
 .subscribe {
     padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
 
 
 
