--- a/css/kasper.css
+++ b/css/kasper.css
@@ -788,6 +788,8 @@ header nav .form i {
 .subscribe {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
+    background-image: url("../images/subscribe.jpg");
+    
 
 
 
