--- a/css/kasper.css
+++ b/css/kasper.css
@@ -789,7 +789,8 @@ header nav .form i {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
     background-image: url("../images/subscribe.jpg");
-    
+    background-size: cover;
+
 
 
 
