--- a/css/kasper.css
+++ b/css/kasper.css
@@ -791,6 +791,8 @@ header nav .form i {
     background-image: url("../images/subscribe.jpg");
     background-size: cover;
     position: relative;
+    color: white;
+}
 
 
 
