--- a/css/kasper.css
+++ b/css/kasper.css
@@ -809,7 +809,9 @@ header nav .form i {
 }
 @media (max-width: 991px) {
     .subscribe .container {
-        
+        flex-direction: column;
+    }
+  }
 
 
 
