--- a/css/kasper.css
+++ b/css/kasper.css
@@ -813,6 +813,12 @@ header nav .form i {
     }
   }
   .subscribe form {
+    display: flex;
+  position: relative;
+  width: 500px;
+  max-width: 100%;
+}
+.subscribe form i {
 
 
 
