--- a/css/kasper.css
+++ b/css/kasper.css
@@ -819,6 +819,12 @@ header nav .form i {
   max-width: 100%;
 }
 .subscribe form i {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 25px;
+  }
+  .subscribe form input[type="email"] {
 
 
 
