--- a/css/kasper.css
+++ b/css/kasper.css
@@ -825,6 +825,14 @@ header nav .form i {
     left: 25px;
   }
   .subscribe form input[type="email"] {
+    border: 1px solid white;
+    border-right: none;
+    background: none;
+    padding: 20px 20px 20px 60px;
+    caret-color: var(--main-color);
+    width: calc(100% - 130px);
+  }
+  .subscribe form input[type="submit"] {
 
 
 
