coordinationsubscribe form input[type=email:focus,

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -833,6 +833,15 @@ header nav .form i {
     width: calc(100% - 130px);
   }
   .subscribe form input[type="submit"] {
+    width: 130px;
+  background-color: var(--main-color);
+  color: white;
+  padding: 10px 20px;
+  border: 1px solid white;
+  border-left: none;
+  text-transform: uppercase;
+}
+.subscribe form input[type="email"]:focus,
 
 
 
