--- a/css/kasper.css
+++ b/css/kasper.css
@@ -842,6 +842,9 @@ header nav .form i {
   text-transform: uppercase;
 }
 .subscribe form input[type="email"]:focus,
+.subscribe form input[type="submit"]:focus {
+    outline: none;
+}
 
 
 
