coordination .subscribe form ::placeholder

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -845,6 +845,9 @@ header nav .form i {
 .subscribe form input[type="submit"]:focus {
     outline: none;
 }
+.subscribe form ::placeholder {
+    color: white;
+  }
 
 
 
