--- a/css/kasper.css
+++ b/css/kasper.css
@@ -848,6 +848,15 @@ header nav .form i {
 .subscribe form ::placeholder {
     color: white;
   }
+  .subscribe p {
+    line-height: 2;
+    margin-left: 50px;
+  }
+  @media (max-width: 991px) {
+    .subscribe p {
+      margin: 30px 0 0;
+    }
+  }
 
 
 
