--- a/css/kasper.css
+++ b/css/kasper.css
@@ -860,6 +860,10 @@ header nav .form i {
   /* End Subscribe */
   /* Start Contact */
 .contact {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+  }
+  .contact .content {
 
 
 
