--- a/css/kasper.css
+++ b/css/kasper.css
@@ -864,6 +864,15 @@ header nav .form i {
     padding-bottom: var(--section-padding);
   }
   .contact .content {
+    display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 767px) {
+  .contact .content {
+    flex-direction: column;
+  }
+}
+.contact .content form {
 
 
 
