--- a/css/kasper.css
+++ b/css/kasper.css
@@ -908,6 +908,12 @@ header nav .form i {
   }
 }
 .contact .content .info h4 {
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    font-weight: 500;
+    font-size: 18px;
+  }
+  .contact .content .info .phone {
 
 
 
