--- a/css/kasper.css
+++ b/css/kasper.css
@@ -914,6 +914,19 @@ header nav .form i {
     font-size: 18px;
   }
   .contact .content .info .phone {
+    display: block;
+  color: #777;
+  margin-bottom: 10px;
+}
+.contact .content .info h4:nth-of-type(2) {
+    margin-top: 90px;
+  }
+  @media (max-width: 767px) {
+    .contact .content .info h4:nth-of-type(2) {
+      margin-top: 30px;
+    }
+  }
+  .contact .content .info address {
 
 
 
