--- a/css/kasper.css
+++ b/css/kasper.css
@@ -927,6 +927,16 @@ header nav .form i {
     }
   }
   .contact .content .info address {
+    color: #777;
+  line-height: 2;
+}
+@media (max-width: 767px) {
+  .contact .content .info address {
+    margin-bottom: 40px;
+  }
+}
+/* End Contact */
+
 
 
 
